--- a/node16.17.0-img/Dockerfile
+++ b/node16.17.0-img/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16.17.0-alpine
 RUN mkdir /cypress-realworld-app
 WORKDIR /cypress-realworld-app
-RUN yarn install
-CMD yarn dev
+#RUN yarn install
+CMD sh startrwa.sh
 EXPOSE 3000-3001
